tests/fixtures/invalid/modules_cycle/b.lby
import a

pub fn from_b n i64 -> i64
    n + 1
